# Cmake_pybind_adapt

./: CMakeLists.txt  README_zh.md  Readme.md  cleanup.sh  first_run.sh  rebulid.sh  requirements.txt  setup.py
include/: utils.h
python/: CMakeLists.txt  pybind_module.cpp
src/: CMakeLists.txt  interpolation.cpp  interpolation_kernel.cu
